added html form

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,14 @@
   <title>Galactic Age Calculator</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Super Galactic Age Calculator</h1>
+    <form id="calculator-form">
+      <label for="age">Enter your age:</label>
+      <input id="age" type="number">
+      <button type="submit">Submit</button>
+    </form>
+    <ul id="response"></ul>
+  </div>
 </body>
 </html>
