--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <h1>Super Galactic Age Calculator</h1>
     <form id="calculator-form">
       <label for="age">Enter your age:</label>
-      <input id="age" type="number">
+      <input id="age" type="number" required>
       <button type="submit">Submit</button>
     </form>
     <ul id="response"></ul>
