added life expectancy html form

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,28 @@
       <input id="age" type="number" required>
       <button type="submit">Submit</button>
     </form>
-    <ul id="response"></ul>
+    <ul id="calculator-response"><hr></ul>
+    <form id="life-expectancy-form">
+      <hr>
+      <div class="form-group">
+        <label for="exercise">How many hours a week do you excersise?</label>
+        <input id="exercise" type="number" required>
+      </div>
+      <div class="form-group">
+        <label for="veggies">How many times do you eat vegetables per week?</label>
+        <input id="veggies" type="number" required>
+      </div>
+      <div class="form-group">
+        <label for="gender">Enter your gender:</label>
+        <input id="gender" type="number" required>
+      </div>
+      <div class="form-group">
+        <label for="smoker">Are you a smoker?</label>
+        <input id="smoker" type="number" required>
+      </div>
+      <button type="submit">Submit</button>
+    </form>
+    <ul id="life-expectancy-response"><hr></ul>
   </div>
 </body>
 </html>
