--- a/src/index.html
+++ b/src/index.html
@@ -16,20 +16,20 @@
       <hr>
       <div class="form-group">
         <label for="exercise">How many hours a week do you excersise?</label>
-        <input id="exercise" type="number" required>
+        <input id="exercise" type="number" placeholder="0" required>
       </div>
       <div class="form-group">
         <label for="veggies">How many times do you eat vegetables per week?</label>
-        <input id="veggies" type="number" required>
+        <input id="veggies" type="number" placeholder="0"  required>
       </div>
-      <div class="form-group">
-        <label for="gender">Enter your gender:</label>
-        <input id="gender" type="number" required>
-      </div>
-      <div class="form-group">
-        <label for="smoker">Are you a smoker?</label>
-        <input id="smoker" type="number" required>
-      </div>
+      <select class="form-control" id="gender">
+        <option value="male">Male</option>
+        <option value="female">Female</option>
+      </select>
+      <select class="form-control" id="smoker">
+        <option value="no">No</option>
+        <option value="yes">Yes</option>
+      </select>
       <button type="submit">Submit</button>
     </form>
     <ul id="life-expectancy-response"><hr></ul>
